[metadata]
name = easy_vasp
version = 1.0.0
author = Ariel Perera
author_email = ariel.perera@gmail.com
description = Easy to use post-processing package for VASP including some Wannier90 additions
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/PeAriel/easy_vasp
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src